--- a/components/card/index.html
+++ b/components/card/index.html
@@ -66,56 +66,196 @@
 
         <h2>Card With badges</h2>
         <div class="component-preview">
-          <div class="card card-badge">
-            <i class="fas fa-heart"></i>
-          </div>
-          <div class="card card-badge">
-            <i class="fas fa-thumbs-up"></i>
+          <div class="card">
+            <div class="card__top">
+              <i class="fas fa-heart card-badge"></i>
+              <img
+                src="https://preview.redd.it/mwwfvxfrg4a41.jpg?auto=webp&s=edaa6a9ca193ba8800ee6044c8108ee48ca53e1f"
+                alt="card-image"
+              />
+      
+              <div class="card-title">
+                <h2>Kakashi Hatake</h2>
+                <small>of the Sharingan</small>
+              </div>
+              <p class="card-desc">
+                Kakashi Hatake (はたけカカシ) is a shinobi of Konohagakure's Hatake
+                clan. Famed as Kakashi of the Sharingan.
+              </p>
+            </div>
+            <div class="card__bottom">
+              <div class="card__bottom-buttons">
+                <button>Read</button>
+                <button>Bookmark</button>
+              </div>
+              <div class="card__bottom-icons">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+                <i class="fas fa-ellipsis-v"></i>
+              </div>
+            </div>
           </div>
         </div>
         <pre class="codebox">
           <code>
-            &lt;div class="card card-badge">
-              &lt;i class="fas fa-heart">&lt;/i>
-            &lt;/div>
-
-            &lt;div class="card card-badge">
-              &lt;i class="fas fa-thumbs-up">&lt;/i>
+            &lt;div class="card">
+              &lt;div class="card__top">
+                &lt;i class="fas fa-heart card-badge">&lt;/i>
+                &lt;img
+                  src="https://preview.redd.it/mwwfvxfrg4a41.jpg?auto=webp&s=edaa6a9ca193ba8800ee6044c8108ee48ca53e1f"
+                  alt="card-img"
+                />
+        
+                &lt;div class="card-title">
+                  &lt;h2>Kakashi Hatake&lt;/h2>
+                  &lt;small>of the Sharingan&lt;/small>
+                &lt;/div>
+                &lt;p class="card-desc">
+                  Kakashi Hatake (はたけカカシ) is a shinobi of Konohagakure's Hatake
+                  clan. Famed as Kakashi of the Sharingan.
+                &lt;/p>
+              &lt;/div>
+              &lt;div class="card__bottom">
+                &lt;div class="card__bottom-buttons">
+                  &lt;button>Read&lt;/button>
+                  &lt;button>Bookmark&lt;/button>
+                &lt;/div>
+                &lt;div class="card__bottom-icons">
+                  &lt;i class="far fa-heart">&lt;/i>
+                  &lt;i class="fas fa-share-alt">&lt;/i>
+                  &lt;i class="fas fa-ellipsis-v">&lt;/i>
+                &lt;/div>
+              &lt;/div>
             &lt;/div>
           </code>
         </pre>
 
-        <h2>Card with dismiss</h2>
+        <h2>Card With dismiss</h2>
         <div class="component-preview">
-          <div class="card card-dismiss">
-            <i class="fas fa-times"></i>
+          <div class="card">
+            <div class="card__top">
+              <i class="fas fa-times dismiss"></i>
+              <img
+                src="https://preview.redd.it/mwwfvxfrg4a41.jpg?auto=webp&s=edaa6a9ca193ba8800ee6044c8108ee48ca53e1f"
+                alt="card-image"
+              />
+      
+              <div class="card-title">
+                <h2>Kakashi Hatake</h2>
+                <small>of the Sharingan</small>
+              </div>
+              <p class="card-desc">
+                Kakashi Hatake (はたけカカシ) is a shinobi of Konohagakure's Hatake
+                clan. Famed as Kakashi of the Sharingan.
+              </p>
+            </div>
+            <div class="card__bottom">
+              <div class="card__bottom-buttons">
+                <button>Read</button>
+                <button>Bookmark</button>
+              </div>
+              <div class="card__bottom-icons">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+                <i class="fas fa-ellipsis-v"></i>
+              </div>
+            </div>
           </div>
         </div>
         <pre class="codebox">
           <code>
-            &lt;div class="card card-dismiss">
-              &lt;i class="fas fa-times">&lt;/i>
+            &lt;div class="card">
+              &lt;div class="card__top">
+                &lt;i class="fas fa-heart dismiss">&lt;/i>
+                &lt;img
+                  src="https://preview.redd.it/mwwfvxfrg4a41.jpg?auto=webp&s=edaa6a9ca193ba8800ee6044c8108ee48ca53e1f"
+                  alt="card-img"
+                />
+        
+                &lt;div class="card-title">
+                  &lt;h2>Kakashi Hatake&lt;/h2>
+                  &lt;small>of the Sharingan&lt;/small>
+                &lt;/div>
+                &lt;p class="card-desc">
+                  Kakashi Hatake (はたけカカシ) is a shinobi of Konohagakure's Hatake
+                  clan. Famed as Kakashi of the Sharingan.
+                &lt;/p>
+              &lt;/div>
+              &lt;div class="card__bottom">
+                &lt;div class="card__bottom-buttons">
+                  &lt;button>Read&lt;/button>
+                  &lt;button>Bookmark&lt;/button>
+                &lt;/div>
+                &lt;div class="card__bottom-icons">
+                  &lt;i class="far fa-heart">&lt;/i>
+                  &lt;i class="fas fa-share-alt">&lt;/i>
+                  &lt;i class="fas fa-ellipsis-v">&lt;/i>
+                &lt;/div>
+              &lt;/div>
             &lt;/div>
           </code>
         </pre>
 
-        <h2>Vertical/Horizontal Cards</h2>
+        <h2>Horizontal Card</h2>
         <div class="component-preview">
-          <div class="card card-vertical">
-            <p>VERTICAL CARD</p>
-          </div>
           <div class="card card-horizontal">
-            <p>HORIZONTAL CARD</p>
+            <div class="card__top">
+              <img
+                src="https://preview.redd.it/mwwfvxfrg4a41.jpg?auto=webp&s=edaa6a9ca193ba8800ee6044c8108ee48ca53e1f"
+                alt="card-image"
+              />
+      
+              <div class="card-title">
+                <h2>Kakashi Hatake</h2>
+                <small>of the Sharingan</small>
+              </div>
+              <p class="card-desc">
+                Kakashi Hatake (はたけカカシ) is a shinobi of Konohagakure's Hatake
+                clan. Famed as Kakashi of the Sharingan.
+              </p>
+            </div>
+            <div class="card__bottom">
+              <div class="card__bottom-buttons">
+                <button>Read</button>
+                <button>Bookmark</button>
+              </div>
+              <div class="card__bottom-icons">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+                <i class="fas fa-ellipsis-v"></i>
+              </div>
+            </div>
           </div>
         </div>
         <pre class="codebox">
           <code>
-            &lt;div class="card card-vertical">
-              &lt;p>VERTICAL CARD&lt;/p>
-            &lt;/div>
-
             &lt;div class="card card-horizontal">
-              &lt;p>HORIZONTAL CARD&lt;/p>
+              &lt;div class="card__top">
+                &lt;img
+                  src="https://preview.redd.it/mwwfvxfrg4a41.jpg?auto=webp&s=edaa6a9ca193ba8800ee6044c8108ee48ca53e1f"
+                  alt="card-image"
+                />
+        
+                &lt;div class="card-title">
+                  &lt;h2>Kakashi Hatake&lt;/h2>
+                  &lt;small>of the Sharingan&lt;/small>
+                &lt;/div>
+                &lt;p class="card-desc">
+                  Kakashi Hatake (はたけカカシ) is a shinobi of Konohagakure's Hatake
+                  clan. Famed as Kakashi of the Sharingan.
+                &lt;/p>
+              &lt;/div>
+              &lt;div class="card__bottom">
+                &lt;div class="card__bottom-buttons">
+                  &lt;button>Read&lt;/button>
+                  &lt;button>Bookmark&lt;/button>
+                &lt;/div>
+                &lt;div class="card__bottom-icons">
+                  &lt;i class="far fa-heart">&lt;/i>
+                  &lt;i class="fas fa-share-alt">&lt;/i>
+                  &lt;i class="fas fa-ellipsis-v">&lt;/i>
+                &lt;/div>
+              &lt;/div>
             &lt;/div>
           </code>
         </pre>
@@ -123,13 +263,63 @@
         <h2>Card w/Shadows</h2>
         <div class="component-preview">
           <div class="card card-shadow">
-            <p>CARD</p>
+            <div class="card__top">
+              <img
+                src="https://preview.redd.it/mwwfvxfrg4a41.jpg?auto=webp&s=edaa6a9ca193ba8800ee6044c8108ee48ca53e1f"
+                alt="card-image"
+              />
+      
+              <div class="card-title">
+                <h2>Kakashi Hatake</h2>
+                <small>of the Sharingan</small>
+              </div>
+              <p class="card-desc">
+                Kakashi Hatake (はたけカカシ) is a shinobi of Konohagakure's Hatake
+                clan. Famed as Kakashi of the Sharingan.
+              </p>
+            </div>
+            <div class="card__bottom">
+              <div class="card__bottom-buttons">
+                <button>Read</button>
+                <button>Bookmark</button>
+              </div>
+              <div class="card__bottom-icons">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+                <i class="fas fa-ellipsis-v"></i>
+              </div>
+            </div>
           </div>
         </div>
         <pre class="codebox">
           <code>
             &lt;div class="card card-shadow">
-              &lt;p>CARD&lt;/p>
+              &lt;div class="card__top">
+                &lt;img
+                  src="https://preview.redd.it/mwwfvxfrg4a41.jpg?auto=webp&s=edaa6a9ca193ba8800ee6044c8108ee48ca53e1f"
+                  alt="card-img"
+                />
+        
+                &lt;div class="card-title">
+                  &lt;h2>Kakashi Hatake&lt;/h2>
+                  &lt;small>of the Sharingan&lt;/small>
+                &lt;/div>
+                &lt;p class="card-desc">
+                  Kakashi Hatake (はたけカカシ) is a shinobi of Konohagakure's Hatake
+                  clan. Famed as Kakashi of the Sharingan.
+                &lt;/p>
+              &lt;/div>
+              &lt;div class="card__bottom">
+                &lt;div class="card__bottom-buttons">
+                  &lt;button>Read&lt;/button>
+                  &lt;button>Bookmark&lt;/button>
+                &lt;/div>
+                &lt;div class="card__bottom-icons">
+                  &lt;i class="far fa-heart">&lt;/i>
+                  &lt;i class="fas fa-share-alt">&lt;/i>
+                  &lt;i class="fas fa-ellipsis-v">&lt;/i>
+                &lt;/div>
+              &lt;/div>
             &lt;/div>
           </code>
         </pre>
@@ -138,9 +328,14 @@
         <h2>Card w/Text Overlay</h2>
         <div class="component-preview">
           <div class="card card-overlay">
+            <img
+                src="https://preview.redd.it/mwwfvxfrg4a41.jpg?auto=webp&s=edaa6a9ca193ba8800ee6044c8108ee48ca53e1f"
+                alt="card-image"
+              />
             <div class="overlay">
               <div class="overlay-text">
-                <h3>Overylayed Text</h3>       
+                <h2>Kakashi Hatake</h2>
+                <small>of the Sharingan</small>       
               </div>
             </div>
           </div>
@@ -148,9 +343,14 @@
         <pre class="codebox">
           <code>
             &lt;div class="card card-overlay">
+              &lt;img
+                  src="https://preview.redd.it/mwwfvxfrg4a41.jpg?auto=webp&s=edaa6a9ca193ba8800ee6044c8108ee48ca53e1f"
+                  alt="card-image"
+                />
               &lt;div class="overlay">
                 &lt;div class="overlay-text">
-                  &lt;h3>Overylayed Text&lt;/h3>       
+                  &lt;h2>Kakashi Hatake&lt;/h2>
+                  &lt;small>of the Sharingan&lt;/small>       
                 &lt;/div>
               &lt;/div>
             &lt;/div>
