--- a/components/list/index.html
+++ b/components/list/index.html
@@ -62,9 +62,129 @@
         <div class="line-break" ></div>
         <p class="component-description">The List component is used to display list items.</p>
 
+        <h2>Normal Lists</h2>
+        <div class="component-preview flex-col">
+          <ul class="list-unordered">
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+          </ul>
+
+          <ul class="list-ordered">
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+          </ul>
+        </div>
+
+        <div class="code-box">
+          <span>Code Preview</span>
+          <div class="code">
+              <div class="line1">
+                  <span class="sym"><</span>
+                  <span class="element">ul </span>
+                  <span class="attribute">class</span>
+                  <span class="sym">=</span>
+                  <span class="attr-content">"list-unordered" </span>
+                  <span class="sym">></span>
+              </div>
+          </div>
+          <div class="code">
+            <div class="line2">
+              <span class="sym"><</span>
+              <span class="element">li</span>
+              <span class="sym">></span>
+              <span class="content">Item1</span>
+              <span class="sym"><</span>
+              <span class="element">/li</span>
+              <span class="sym">></span>
+            </div>
+          </div>
+          <div class="code">
+            <div class="line2">
+              <span class="sym"><</span>
+              <span class="element">li</span>
+              <span class="sym">></span>
+              <span class="content">Item2</span>
+              <span class="sym"><</span>
+              <span class="element">/li</span>
+              <span class="sym">></span>
+            </div>
+          </div>
+          <div class="code">
+            <div class="line2">
+              <span class="sym"><</span>
+              <span class="element">li</span>
+              <span class="sym">></span>
+              <span class="content">Item3</span>
+              <span class="sym"><</span>
+              <span class="element">/li</span>
+              <span class="sym">></span>
+            </div>
+          </div>
+          <div class="code">
+            <div class="line1">
+              <span class="sym"><</span>
+              <span class="element">/ul</span>
+              <span class="sym">></span>
+            </div>
+          </div>
+
+          <div class="code">
+            <div class="line1">
+                <span class="sym"><</span>
+                <span class="element">ul </span>
+                <span class="attribute">class</span>
+                <span class="sym">=</span>
+                <span class="attr-content">"list-ordered" </span>
+                <span class="sym">></span>
+            </div>
+        </div>
+        <div class="code">
+          <div class="line2">
+            <span class="sym"><</span>
+            <span class="element">li</span>
+            <span class="sym">></span>
+            <span class="content">Item1</span>
+            <span class="sym"><</span>
+            <span class="element">/li</span>
+            <span class="sym">></span>
+          </div>
+        </div>
+        <div class="code">
+          <div class="line2">
+            <span class="sym"><</span>
+            <span class="element">li</span>
+            <span class="sym">></span>
+            <span class="content">Item2</span>
+            <span class="sym"><</span>
+            <span class="element">/li</span>
+            <span class="sym">></span>
+          </div>
+        </div>
+        <div class="code">
+          <div class="line2">
+            <span class="sym"><</span>
+            <span class="element">li</span>
+            <span class="sym">></span>
+            <span class="content">Item3</span>
+            <span class="sym"><</span>
+            <span class="element">/li</span>
+            <span class="sym">></span>
+          </div>
+        </div>
+        <div class="code">
+          <div class="line1">
+            <span class="sym"><</span>
+            <span class="element">/ul</span>
+            <span class="sym">></span>
+          </div>
+        </div>
+        </div>
+
         <h2>Spaced List</h2>
         <div class="component-preview">
-          <ul class="list-spaced">
+          <ul class="list list-spaced">
             <li>Item 1</li>
             <li>Item 2</li>
             <li>Item 3</li>
@@ -126,7 +246,7 @@
         </div>
         <h2>stacked List</h2>
         <div class="component-preview">
-          <ul class="list-stacked">
+          <ul class="list list-stacked">
             <li>Item 1</li>
             <li>Item 2</li>
             <li>Item 3</li>
