--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
 :root {
   --white: #fff;
   --gray: gray;
+  --red: red;
+  --red-lite: tomato;
   --code-box-bg: #011627;
   --code-preview-1: pink;
   --code-preview-2: #a2ffda;
