--- a/components/list/list.css
+++ b/components/list/list.css
@@ -1,6 +1,35 @@
+li {
+  font-size: 1.2rem;
+  margin: 0.5rem 0;
+  font-weight: bold;
+}
+
+.list-unordered > li {
+  list-style: circle;
+}
+
+.list-ordered > li {
+  list-style: decimal;
+}
+
 .list-spaced {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+.list-spaced > li {
+  list-style: decimal;
+}
+
+.list-stacked > li {
+  border: 1px solid var(--code-box-bg);
+  padding: 1rem 5rem;
+  margin: 0;
+}
+
+.list-stacked > li:hover {
+  color: var(--white);
+  background-color: var(--code-box-bg);
 }
